projects/ng-aquila/documentation/examples/error/error/error-example.ts
import { Component } from '@angular/core';

/** @title Error example */
@Component({
  templateUrl: './error-example.html',
  styleUrls: ['./error-example.css']
})
export class ErrorExampleComponent {}
